--- a/.github/workflows/build_and_deploy_version.yml
+++ b/.github/workflows/build_and_deploy_version.yml
@@ -20,8 +20,11 @@ on:
         default: false
         type: boolean
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
+    tags:
+      - 'v*' # Trigger on version tags (e.g., v1.0.0)
+  
 
 env:
   VITE_BASE_URL: ${{ inputs.api_url || vars.API_URL  }} # Set the default value to the environment variable or a fallback value
